--- a/configs/layer-panel-zoom-config.json
+++ b/configs/layer-panel-zoom-config.json
@@ -94,12 +94,10 @@
   },
   "theme": "dark",
   "components": [],
-  "footerTabs": {
-    "tabs": {
-      "core": ["legend", "layers", "details"]
-    }
-  },
-  "corePackages": [],
+  "corePackages": [
+    "layers-panel",
+    "footer-panel"
+  ],
   "suportedLanguages": [
     "en"
   ]
