--- a/configs/package-footer-panel-geochart-map1-config.json
+++ b/configs/package-footer-panel-geochart-map1-config.json
@@ -140,17 +140,8 @@
     ]
   },
   "theme": "geo.ca",
-  "footerTabs": {
-    "tabs": {
-      "core": [
-        "layers",
-        "details",
-        "geochart"
-      ]
-    }
-  },
   "corePackages": [
-    "geochart"
+    "footer-panel"
   ],
   "suportedLanguages": [
     "en",
