--- a/configs/package-footer-panel-geochart-map2-config.json
+++ b/configs/package-footer-panel-geochart-map2-config.json
@@ -140,13 +140,8 @@
     ]
   },
   "theme": "dark",
-  "footerTabs": {
-    "tabs": {
-      "core": ["legend", "layers", "details", "geochart"]
-    }
-  },
   "corePackages": [
-    "geochart"
+    "footer-panel"
   ],
   "suportedLanguages": [
     "en",
