--- a/configs/package-footer1-config.json
+++ b/configs/package-footer1-config.json
@@ -121,12 +121,7 @@
   "theme": "geo.ca",
   "navBar": ["zoom", "fullscreen", "home", "location", "export"],
   "components": ["north-arrow", "overview-map"],
-  "footerTabs": {
-    "tabs": {
-      "core": ["legend", "layers", "details"]
-    }
-  },
-  "corePackages": [],
+  "corePackages": ["footer-panel"],
   "externalPackages": [],
   "suportedLanguages": ["en"]
 }
