--- a/configs/package-footer-panel-geochart-map2-config.json
+++ b/configs/package-footer-panel-geochart-map2-config.json
@@ -142,12 +142,15 @@
   "theme": "dark",
   "footerTabs": {
     "tabs": {
-      "core": ["legend", "layers", "details", "geochart"]
+      "core": [
+        "legend",
+        "layers",
+        "details",
+        "geochart"
+      ]
     }
   },
-  "corePackages": [
-    "geochart"
-  ],
+  "corePackages": [],
   "suportedLanguages": [
     "en",
     "fr"
