--- a/configs/package-footer-panel-geochart-map1-config.json
+++ b/configs/package-footer-panel-geochart-map1-config.json
@@ -140,9 +140,10 @@
     ]
   },
   "theme": "geo.ca",
-  "footerTabs": {
+  "footerBar": {
     "tabs": {
       "core": [
+        "legend",
         "layers",
         "details",
         "geochart"
