--- a/configs/package-footer1-config.json
+++ b/configs/package-footer1-config.json
@@ -122,7 +122,7 @@
     ]
   },
   "theme": "geo.ca",
-  "navBar": ["zoom", "fullscreen", "home", "location"],
+  "navBar": ["zoom", "fullscreen", "home", "location", "export"],
   "components": ["north-arrow", "overview-map"],
   "footerBar": {
     "tabs": {
