--- a/configs/raw-app-bar.json
+++ b/configs/raw-app-bar.json
@@ -147,7 +147,7 @@
       "core": ["geolocator", "export", "guide", "details", "legend"]
     }
   },
-  "navBar": ["zoom", "fullscreen", "home", "location"],
+  "navBar": ["zoom", "fullscreen", "home", "location", "export"],
   "components": ["north-arrow"],
   "corePackages": [],
   "externalPackages": [],
